feat: update app for react

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <title>Testing webpack</title>
   </head>
   <body>
+    <div id="root" />
     <script src="{% static 'index-bundle.js' %}"></script>
   </body>
 </html>
